--- a/informacion.html
+++ b/informacion.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Información</title>
 </head>
 <body>
     <header>
-        <h1>INFORMACIÓN</h1>
+        <h1>Todo lo que Necesitas Saber sobre Ciberseguridad y Protección Digital</h1>
     </header>
     
     <a href="informacion.html">INFORMACIÓN</a>
