--- a/informacion.html
+++ b/informacion.html
@@ -10,6 +10,11 @@
         <h1>Todo lo que Necesitas Saber sobre Ciberseguridad y Protección Digital</h1>
     </header>
     
+    <h3>Conceptos clave</h3>
+    
+    <h3>Amenazas</h3>
+    <h3>Buenas prácticas</h3>
+
     <a href="informacion.html">INFORMACIÓN</a>
     <a href="galeria.html">GALERÍA</a>
     <a href="index.html">INICIO</a>
