--- a/informacion.html
+++ b/informacion.html
@@ -11,7 +11,9 @@
     </header>
     
     <h3>Conceptos clave</h3>
-    
+    <ul> 
+        <li>Autenticación: Proceso de verificar la identidad de un usuario.</li>
+    </ul>
     <h3>Amenazas</h3>
     <h3>Buenas prácticas</h3>
 
