--- a/informacion.html
+++ b/informacion.html
@@ -11,11 +11,28 @@
     </header>
     
     <h3>Conceptos clave</h3>
-    <ul> 
+    <ol> 
         <li>Autenticación: Proceso de verificar la identidad de un usuario.</li>
-    </ul>
+        <li>Firewall: Barrera que filtra el tráfico entre redes seguras e inseguras.</li>
+        <li>Encriptación: Técnica para cofidicar información y protegerla.</li>
+        <li>VPN: Red segura para acceder a internet o redes corporativas. </li>
+        <li>Antivirus: Software que detecta y elimina software malicioso. </li>
+        <li>Política de seguridad: Conjunto de normas y procedimientos para proteger datos. </li>
+    </ol>
+
     <h3>Amenazas</h3>
+    <ol>
+        <li></li>
+    </ol>
     <h3>Buenas prácticas</h3>
+    <ol>
+        <li>Utilizar contraseñas seguras, que sean únicas y mezcla de letras, números y símbolos.</li>
+        <li>Añadir una segunda capa de seguridad a tus cuentas.</li>
+        <li>Evitar vulnerabilidad con el solftware actualizandolo a la última version.</li>
+        <li>Usar un VPN en redes abiertas para proteger tus datos. </li>
+        <li>Proteger tus datos haciendo copias de seguridad seguidas.</li>
+        <li>No ingresar a enlaces sospechosos ya que podrían comprometer tu seguridad.</li> 
+    </ol>
 
     <a href="informacion.html">INFORMACIÓN</a>
     <a href="galeria.html">GALERÍA</a>
