--- a/informacion.html
+++ b/informacion.html
@@ -22,6 +22,9 @@
 
     <h3>Amenazas</h3>
     <ol>
+        <li>Malware: Software maliciosos que se instala al hacer clic en enlaces, archivos adjuntos o anuncios sospechosos.</li>
+        <li>Ingeniería social: Utiliza la manipulación para obtener información personal haciéndose pasar por alguien de confianza a través de redes sociales, correos, llamadas, etc. </li>
+        <li>Spam: Envío masivo de mensajes que pueden contener virus o enlaces maliciosos para robar información.</li>
         <li></li>
     </ol>
     <h3>Buenas prácticas</h3>
