--- a/informacion.html
+++ b/informacion.html
@@ -25,7 +25,9 @@
         <li>Malware: Software maliciosos que se instala al hacer clic en enlaces, archivos adjuntos o anuncios sospechosos.</li>
         <li>Ingeniería social: Utiliza la manipulación para obtener información personal haciéndose pasar por alguien de confianza a través de redes sociales, correos, llamadas, etc. </li>
         <li>Spam: Envío masivo de mensajes que pueden contener virus o enlaces maliciosos para robar información.</li>
-        <li></li>
+        <li>Pishing: Ciberataque que consiste en enviar un correo que imita a una institución o persona confiable para engañar al destinatario y robar su información.</li>
+        <li>Ransomware: Tipo de malware que bloquea los sistemas de una empresa y exige un pago para recuperar el acceso, generalmente instalado mediante correos, enlaces sospechosos o publicidad engañosa.</li>
+        <li>Botnets: Las redes de robots infectan varios ordenadores para usarlos de forma coordinada con fines maliciosos, sin que los usuarios sepan que sus equipos están comprometidos.</li>
     </ol>
     <h3>Buenas prácticas</h3>
     <ol>
