--- a/index.html
+++ b/index.html
@@ -14,5 +14,28 @@
     <a href="galeria.html">GALERÍA</a>
     <a href="index.html">INICIO</a>
 
+    <main class="info-grid">
+        <section>
+            <h2>¿Qué es la Ciberseguridad?</h2>
+            <p>La ciberseguridad es el conjunto de medidas y prácticas que protegen los sistemas informáticos, redes y datos contra accesos no autorizados o ataques maliciosos.</p>
+        </section>
+
+        <section>
+            <h2>Importancia</h2>
+            <p>Es fundamental para mantener la privacidad, evitar fraudes, proteger la información personal y garantizar el funcionamiento seguro de servicios digitales.</p>
+        </section>
+
+        <section>
+            <h2>Consejos Básicos</h2>
+            <ul>
+                <li>Usa contraseñas seguras y únicas.</li>
+                <li>No compartas información personal en sitios dudosos.</li>
+                <li>Mantén tu antivirus actualizado.</li>
+                <li>Evita conectarte a redes Wi-Fi públicas sin protección.</li>
+            </ul>
+        </section>
+    </main>
+
+
 </body>
 </html>
