--- a/informacion.html
+++ b/informacion.html
@@ -10,6 +10,7 @@
         <h1>Todo lo que Necesitas Saber sobre Ciberseguridad y Protección Digital</h1>
     </header>
     
+    <div>
     <h3>Conceptos clave</h3>
     <ol> 
         <li>Autenticación: Proceso de verificar la identidad de un usuario.</li>
@@ -19,7 +20,7 @@
         <li>Antivirus: Software que detecta y elimina software malicioso. </li>
         <li>Política de seguridad: Conjunto de normas y procedimientos para proteger datos. </li>
     </ol>
-
+    </div>
     <h3>Amenazas</h3>
     <ol>
         <li>Malware: Software maliciosos que se instala al hacer clic en enlaces, archivos adjuntos o anuncios sospechosos.</li>
