--- a/informacion.html
+++ b/informacion.html
@@ -6,12 +6,18 @@
     <title>Información</title>
 </head>
 <body>
+
+
     <header>
         <h1>Todo lo que Necesitas Saber sobre Ciberseguridad y Protección Digital</h1>
     </header>
-    
-    <div>
+
+        <a href="informacion.html">INFORMACIÓN</a>
+    <a href="galeria.html">GALERÍA</a>
+    <a href="index.html">INICIO</a> 
     <h3>Conceptos clave</h3>
+
+<section>
     <ol> 
         <li>Autenticación: Proceso de verificar la identidad de un usuario.</li>
         <li>Firewall: Barrera que filtra el tráfico entre redes seguras e inseguras.</li>
@@ -20,8 +26,10 @@
         <li>Antivirus: Software que detecta y elimina software malicioso. </li>
         <li>Política de seguridad: Conjunto de normas y procedimientos para proteger datos. </li>
     </ol>
-    </div>
+</section>
+
     <h3>Amenazas</h3>
+<section>
     <ol>
         <li>Malware: Software maliciosos que se instala al hacer clic en enlaces, archivos adjuntos o anuncios sospechosos.</li>
         <li>Ingeniería social: Utiliza la manipulación para obtener información personal haciéndose pasar por alguien de confianza a través de redes sociales, correos, llamadas, etc. </li>
@@ -30,7 +38,10 @@
         <li>Ransomware: Tipo de malware que bloquea los sistemas de una empresa y exige un pago para recuperar el acceso, generalmente instalado mediante correos, enlaces sospechosos o publicidad engañosa.</li>
         <li>Botnets: Las redes de robots infectan varios ordenadores para usarlos de forma coordinada con fines maliciosos, sin que los usuarios sepan que sus equipos están comprometidos.</li>
     </ol>
+</section>
+
     <h3>Buenas prácticas</h3>
+<section>
     <ol>
         <li>Utilizar contraseñas seguras, que sean únicas y mezcla de letras, números y símbolos.</li>
         <li>Añadir una segunda capa de seguridad a tus cuentas.</li>
@@ -39,10 +50,7 @@
         <li>Proteger tus datos haciendo copias de seguridad seguidas.</li>
         <li>No ingresar a enlaces sospechosos ya que podrían comprometer tu seguridad.</li> 
     </ol>
-
-    <a href="informacion.html">INFORMACIÓN</a>
-    <a href="galeria.html">GALERÍA</a>
-    <a href="index.html">INICIO</a>
+</section>
 
 </body>
 </html>
