--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
     <header>
         <h1>INICIO</h1>
     </header>
+    <nav>
+        <a href="informacion.html">INFORMACIÓN</a>
+        <a href="galeria.html">GALERÍA</a>
+        <a href="index.html">INICIO</a>
+    </nav>
     
-    <a href="informacion.html">INFORMACIÓN</a>
-    <a href="galeria.html">GALERÍA</a>
-    <a href="index.html">INICIO</a>
-
     <main class="info-grid">
         <section>
             <h2>¿Qué es la Ciberseguridad?</h2>
