--- a/informacion.html
+++ b/informacion.html
@@ -13,39 +13,49 @@
         <h1>Todo lo que Necesitas Saber sobre Ciberseguridad y Protección Digital</h1>
     </header>
 
-    <a href="informacion.html">INFORMACIÓN</a>
-    <a href="galeria.html">GALERÍA</a>
-    <a href="index.html">INICIO</a> 
-    <h3>Conceptos clave</h3>
+    <nav>
+        <a href="informacion.html">INFORMACIÓN</a>
+        <a href="galeria.html">GALERÍA</a>
+        <a href="index.html">INICIO</a> 
+    </nav>
 
-    <ol> 
-        <li>Autenticación: Proceso de verificar la identidad de un usuario.</li>
-        <li>Firewall: Barrera que filtra el tráfico entre redes seguras e inseguras.</li>
-        <li>Encriptación: Técnica para cofidicar información y protegerla.</li>
-        <li>VPN: Red segura para acceder a internet o redes corporativas. </li>
-        <li>Antivirus: Software que detecta y elimina software malicioso. </li>
-        <li>Política de seguridad: Conjunto de normas y procedimientos para proteger datos. </li>
-    </ol>
+    <main class="info-grid">
+        <section>
+            <h3>Conceptos clave</h3>
+            <ol> 
+                <li>Autenticación: Proceso de verificar la identidad de un usuario.</li>
+                <li>Firewall: Barrera que filtra el tráfico entre redes seguras e inseguras.</li>
+                <li>Encriptación: Técnica para cofidicar información y protegerla.</li>
+                <li>VPN: Red segura para acceder a internet o redes corporativas. </li>
+                <li>Antivirus: Software que detecta y elimina software malicioso. </li>
+                <li>Política de seguridad: Conjunto de normas y procedimientos para proteger datos. </li>
+            </ol>
+        </section> 
 
-    <h3>Amenazas</h3>
-    <ol>
-        <li>Malware: Software maliciosos que se instala al hacer clic en enlaces, archivos adjuntos o anuncios sospechosos.</li>
-        <li>Ingeniería social: Utiliza la manipulación para obtener información personal haciéndose pasar por alguien de confianza a través de redes sociales, correos, llamadas, etc. </li>
-        <li>Spam: Envío masivo de mensajes que pueden contener virus o enlaces maliciosos para robar información.</li>
-        <li>Pishing: Ciberataque que consiste en enviar un correo que imita a una institución o persona confiable para engañar al destinatario y robar su información.</li>
-        <li>Ransomware: Tipo de malware que bloquea los sistemas de una empresa y exige un pago para recuperar el acceso, generalmente instalado mediante correos, enlaces sospechosos o publicidad engañosa.</li>
-        <li>Botnets: Las redes de robots infectan varios ordenadores para usarlos de forma coordinada con fines maliciosos, sin que los usuarios sepan que sus equipos están comprometidos.</li>
-    </ol>
+        <section>
+            <h3>Amenazas</h3>
+            <ol>
+                <li>Malware: Software maliciosos que se instala al hacer clic en enlaces, archivos adjuntos o anuncios sospechosos.</li>
+                <li>Ingeniería social: Utiliza la manipulación para obtener información personal haciéndose pasar por alguien de confianza a través de redes sociales, correos, llamadas, etc. </li>
+                <li>Spam: Envío masivo de mensajes que pueden contener virus o enlaces maliciosos para robar información.</li>
+                <li>Pishing: Ciberataque que consiste en enviar un correo que imita a una institución o persona confiable para engañar al destinatario y robar su información.</li>
+                <li>Ransomware: Tipo de malware que bloquea los sistemas de una empresa y exige un pago para recuperar el acceso, generalmente instalado mediante correos, enlaces sospechosos o publicidad engañosa.</li>
+                <li>Botnets: Las redes de robots infectan varios ordenadores para usarlos de forma coordinada con fines maliciosos, sin que los usuarios sepan que sus equipos están comprometidos.</li>
+            </ol>
+        </section> 
 
-    <h3>Buenas prácticas</h3>
-    <ol>
-        <li>Utilizar contraseñas seguras, que sean únicas y mezcla de letras, números y símbolos.</li>
-        <li>Añadir una segunda capa de seguridad a tus cuentas.</li>
-        <li>Evitar vulnerabilidad con el solftware actualizandolo a la última version.</li>
-        <li>Usar un VPN en redes abiertas para proteger tus datos. </li>
-        <li>Proteger tus datos haciendo copias de seguridad seguidas.</li>
-        <li>No ingresar a enlaces sospechosos ya que podrían comprometer tu seguridad.</li> 
-    </ol>
+        <section>
+            <h3>Buenas prácticas</h3>
+            <ol>
+                <li>Utilizar contraseñas seguras, que sean únicas y mezcla de letras, números y símbolos.</li>
+                <li>Añadir una segunda capa de seguridad a tus cuentas.</li>
+                <li>Evitar vulnerabilidad con el solftware actualizandolo a la última version.</li>
+                <li>Usar un VPN en redes abiertas para proteger tus datos. </li>
+                <li>Proteger tus datos haciendo copias de seguridad seguidas.</li>
+                <li>No ingresar a enlaces sospechosos ya que podrían comprometer tu seguridad.</li> 
+            </ol>
+        </section>
 
+</main> 
 </body>
 </html>
