--- a/informacion.html
+++ b/informacion.html
@@ -23,24 +23,24 @@
         <section>
             <h2>Conceptos clave</h2>
             <ol> 
-                <li>Autenticación: Proceso de verificar la identidad de un usuario.</li>
-                <li>Firewall: Barrera que filtra el tráfico entre redes seguras e inseguras.</li>
-                <li>Encriptación: Técnica para cofidicar información y protegerla.</li>
-                <li>VPN: Red segura para acceder a internet o redes corporativas. </li>
-                <li>Antivirus: Software que detecta y elimina software malicioso. </li>
-                <li>Política de seguridad: Conjunto de normas y procedimientos para proteger datos. </li>
+                <li><b>Autenticación:</b> Proceso de verificar la identidad de un usuario.</li>
+                <li><b>Firewall:</b> Barrera que filtra el tráfico entre redes seguras e inseguras.</li>
+                <li><b>Encriptación:</b> Técnica para cofidicar información y protegerla.</li>
+                <li><b>VPN:</b> Red segura para acceder a internet o redes corporativas. </li>
+                <li><b>Antivirus:</b> Software que detecta y elimina software malicioso. </li>
+                <li><b>Política de seguridad:</b> Conjunto de normas y procedimientos para proteger datos. </li>
             </ol>
         </section> 
 
         <section>
             <h2>Amenazas</h2>
             <ol>
-                <li>Malware: Software maliciosos que se instala al hacer clic en enlaces, archivos adjuntos o anuncios sospechosos.</li>
-                <li>Ingeniería social: Utiliza la manipulación para obtener información personal haciéndose pasar por alguien de confianza a través de redes sociales, correos, llamadas, etc. </li>
-                <li>Spam: Envío masivo de mensajes que pueden contener virus o enlaces maliciosos para robar información.</li>
-                <li>Pishing: Ciberataque que consiste en enviar un correo que imita a una institución o persona confiable para engañar al destinatario y robar su información.</li>
-                <li>Ransomware: Tipo de malware que bloquea los sistemas de una empresa y exige un pago para recuperar el acceso, generalmente instalado mediante correos, enlaces sospechosos o publicidad engañosa.</li>
-                <li>Botnets: Las redes de robots infectan varios ordenadores para usarlos de forma coordinada con fines maliciosos, sin que los usuarios sepan que sus equipos están comprometidos.</li>
+                <li><b>Malware:</b> Software maliciosos que se instala al hacer clic en enlaces, archivos adjuntos o anuncios sospechosos.</li>
+                <li><b>Ingeniería social:</b> Utiliza la manipulación para obtener información personal haciéndose pasar por alguien de confianza a través de redes sociales, correos, llamadas, etc. </li>
+                <li><b>Spam:</b> Envío masivo de mensajes que pueden contener virus o enlaces maliciosos para robar información.</li>
+                <li><b>Pishing:</b> Ciberataque que consiste en enviar un correo que imita a una institución o persona confiable para engañar al destinatario y robar su información.</li>
+                <li><b>Ransomware:</b> Tipo de malware que bloquea los sistemas de una empresa y exige un pago para recuperar el acceso, generalmente instalado mediante correos, enlaces sospechosos o publicidad engañosa.</li>
+                <li><b>Botnets:</b> Las redes de robots infectan varios ordenadores para usarlos de forma coordinada con fines maliciosos, sin que los usuarios sepan que sus equipos están comprometidos.</li>
             </ol>
         </section> 
 
