--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 </head>
 <body>
     <header>
-        <h1>INICIO</h1>
+        <h1>Ciberseguridad</h1>
     </header>
     <nav>
         <a href="informacion.html">INFORMACIÓN</a>
         <a href="galeria.html">GALERÍA</a>
         <a href="index.html">INICIO</a>
     </nav>
-    
+
     <main class="info-grid">
         <section>
             <h2>¿Qué es la Ciberseguridad?</h2>
